jump fix

--- a/client/index.less
+++ b/client/index.less
@@ -35,9 +35,14 @@ td {
 }
 
 .active {
-  background-color: #222222;
+  border: 4px solid yellow;
+
 }
 
-.selected {
+.inactive {
+  border: 4px solid blue;
+}
+
+.selectedPiece {
   border: 2px solid red;
 }
